syntax = "proto3";

package ProtocolBuffer;

message ProtoMessage{
  //
  int32 seq = 1;
  
  oneof msg{
    // module: sys
	// Heartbeat heartbeat;
	
    // module: login
	SigninRequest signonRequest = 3;
	SignonResponse signonResponse = 4;
	// Version_requset version_request = 5;
	// Version_respense Version_respense = 6;
	SignoutRequese signoutRequest = 7;
	SignupMailRequest signupMailRequest = 8;
	SignupMailResponse signupMailResponse = 9;
	RegisterCaptchaRequest registerCaptchaRequest = 10;
	RegisterCaptchaResponse registerCaptchaResponse = 11;
	SignupInfoRequest signupInfoRequest = 12;
	SignupInfoResponse signupInfoResponse = 13;
	PasswordModifyCaptchaRequest passwordModifyCaptchaRequest = 14;
	PasswordModifyCaptchaResponse passwordModifyCaptchaResponse = 15;
	PassordModifyRequest passordModifyRequest = 16;
	PassordModifyResponse passordModifyResponse = 17;

	// module: chat
	
	// module: contact
  }
}


// 心跳包 ①客户端->服务端  ②服务端->客户端（模仿于万恶的断网客户端）
message Heartbeat{

}


// func: sign in
message SigninRequest{
	string mail_address = 1;
	string password = 2;
}

message SignonResponse{
  bool status = 1;
  string mail_address = 2;
}
// func: sign out
// ①注销包（客户端->服务端，服务端接受到这个包，表示客户端主动登出，将为该用户执行登出操作，但并不释放连接，客户端也保证用户登出）
message SignoutRequese{
  // 服务没收到有影响吗
}

// func: sign up
message SignupMailRequest{
	string mail_address = 1;
}

message SignupMailResponse{
	bool status = 1;
	string mail_address = 2;
}

message RegisterCaptchaRequest{
	string mail_address = 1;
}

message RegisterCaptchaResponse{
	bool status = 1;//验证码是否发送成功
	string mail_address = 2;
}

message SignupInfoRequest{
	string mail_address = 1;
	string password = 2;
    string nickname = 3;
	string captcha = 4;
}

message SignupInfoResponse{
  bool status = 1;
  string mail_address = 2;
}

// func: change password

message PasswordModifyCaptchaRequest{
	string mail_address = 1;
}

message PasswordModifyCaptchaResponse{
	bool status = 1;
	string mail_address = 2;
}

message PassordModifyRequest{
	string mail_address = 1;
	string captcha = 2;
	string password = 3;
}

message PassordModifyResponse{
	bool status = 1;
	string mail_address = 2;
}